[package]
name = "todoist_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
hyper = "0.14.20"
tokio = "1.20.1"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
